--- a/Starwars/index.html
+++ b/Starwars/index.html
@@ -29,14 +29,72 @@
 				<span class="hero__premier">Премьера</span>
 				<span class="hero__date">19 декабря 2019</span
 				>
-				<button class="button-play hero__button">
+				<a href="https://www.youtube.com/watch?v=8Qn_spdM5Zg" data-fancybox class="button-play hero__button" data-target="https://www.youtube.com/watch?v=8Qn_spdM5Zg">
 					Смотреть трейлер
-				</button>
+				</a>
 			</div>
 			<!-- /.hero -->
+			<div class="episodes">
+				<h2 class="episodes__title">Предыдущие эпизоды</h2>
+				<div class="slider">
+					<div class="slider__item  episode-1">
+						<div class="slider__year">1977</div>
+						<h3 class="slider__title">Эпизод IV: <br>Новая надежда</h3>
+						<div class="slider__raiting">
+							<span class="slider__raiting-label">Рейтинг</span>
+						</div>
+						<img src="./img/Rectangle_1.png" alt="" class="slider__image">
+					</div>
+					<div class="slider__item episode-2">
+						<div class="slider__year">1980</div>
+						<h3 class="slider__title">Эпизод V: <br>Империя наносит ответный удар</h3>
+						<div class="slider__raiting"><span class="slider__raiting-label">Рейтинг</span></div>
+						<img src="./img/Rectangle_2.png" alt="" class="slider__image">
+					</div>
+					<div class="slider__item episode-3">
+						<div class="slider__year">1983</div>
+						<h3 class="slider__title">Эпизод VI: <br>Возвращение джедая</h3>
+						<div class="slider__raiting"><span class="slider__raiting-label">Рейтинг</span></div>
+						<img src="./img/Rectangle_3.png" alt="" class="slider__image">
+					</div>
+					<div class="slider__item episode-4">
+						<div class="slider__year">1999</div>
+						<h3 class="slider__title">Эпизод I: <br>Скрытая угроза</h3>
+						<div class="slider__raiting"><span class="slider__raiting-label">Рейтинг</span></div>
+						<img src="./img/Rectangle_4.png" alt="" class="slider__image">
+					</div>
+					<div class="slider__item episode-1">
+						<div class="slider__year">2002</div>
+						<h3 class="slider__title">Эпизод II: <br>Атака клонов</h3>
+						<div class="slider__raiting"><span class="slider__raiting-label">Рейтинг</span></div>
+						<img src="./img/Rectangle_1.png" alt="" class="slider__image">
+					</div>
+					<div class="slider__item episode-2">
+						<div class="slider__year">2005</div>
+						<h3 class="slider__title">Эпизод III: <br>Месть ситхов</h3>
+						<div class="slider__raiting"><span class="slider__raiting-label">Рейтинг</span></div>
+						<img src="./img/Rectangle_2.png" alt="" class="slider__image">
+					</div>
+					<div class="slider__item episode-3">
+						<div class="slider__year">2015</div>
+						<h3 class="slider__title">Пробуждение силы</h3>
+						<div class="slider__raiting"><span class="slider__raiting-label">Рейтинг</span></div>
+						<img src="./img/Rectangle_3.png" alt="" class="slider__image">
+					</div>
+					<div class="slider__item episode-4">
+						<div class="slider__year">2017</div>
+						<h3 class="slider__title">Последние джедаи</h3>
+						<div class="slider__raiting"><span class="slider__raiting-label">Рейтинг</span></div>
+						<img src="./img/Rectangle_4.png" alt="" class="slider__image">
+					</div>
+				</div>
+			</div>
+			<!-- /.episodes -->
 		</main>
 	</div>
 	<!-- /.container -->
-
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+	<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </body>
 </html>
